[package]
name = "cart-actix-token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
jsonwebtoken = "8.2.0"
serde_json = "1.0.91"
argon2 = "0.5.2"
env_logger = "0.10.0"
futures = "0.3"
actix-cors = "0.6.4"



[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]
